--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: RDP + Tailscale (Ubuntu MATE, FIX)
+name: RDP + Tailscale (Ubuntu MATE, FULL FIX)
 
 on:
   workflow_dispatch:
@@ -16,96 +16,93 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y curl wget gnupg lsof net-tools ca-certificates software-properties-common
 
-      - name: Create user 'runneradmin' (samain user/pw)
+      - name: Create users & passwords (runneradmin + runner)
         shell: bash
         run: |
           set -euxo pipefail
-          USERNAME="runneradmin"
-          PASSWORD="Asukoe123456"   # Disarankan pakai secret nantinya
-          if ! id -u "$USERNAME" >/dev/null 2>&1; then
-            sudo useradd -m -s /bin/bash "$USERNAME"
+          PASS="Asukoe123456"
+          # runneradmin
+          if ! id -u runneradmin >/dev/null 2>&1; then
+            sudo useradd -m -s /bin/bash runneradmin
           fi
-          echo "${USERNAME}:${PASSWORD}" | sudo chpasswd
-          sudo usermod -aG sudo "$USERNAME"
-          echo "RDP_USER=$USERNAME" >> "$GITHUB_ENV"
-          echo "RDP_PASS=$PASSWORD" >> "$GITHUB_ENV"
+          echo "runneradmin:${PASS}" | sudo chpasswd
+          sudo usermod -aG sudo runneradmin
+          # pastikan user default 'runner' juga bisa login dgn pass sama
+          echo "runner:${PASS}" | sudo chpasswd || true
 
-      - name: Install MATE Desktop + xRDP (lebih stabil)
+          echo "RDP_USER1=runneradmin" >> "$GITHUB_ENV"
+          echo "RDP_USER2=runner" >> "$GITHUB_ENV"
+          echo "RDP_PASS=${PASS}" >> "$GITHUB_ENV"
+
+      - name: Install MATE Desktop + xRDP (stable)
         shell: bash
         run: |
           set -euxo pipefail
-          # Paket inti MATE yang ringan + dependensi xRDP
           sudo DEBIAN_FRONTEND=noninteractive apt-get install -y \
             mate-desktop-environment-core mate-terminal marco pluma engrampa eom \
-            xrdp xorgxrdp dbus-x11 policykit-1
+            xrdp xorgxrdp dbus-x11 policykit-1 dconf-cli
 
-          # Tambahan tema & icon supaya UI nggak berantakan (opsional)
-          sudo apt-get install -y lightdm light-themes adwaita-icon-theme-full || true
-
-          # xrdp perlu group ssl-cert
           sudo adduser xrdp ssl-cert || true
 
-      - name: Force xRDP to launch MATE session
+      - name: Force xRDP -> MATE & fix permissions (runner + runneradmin)
         shell: bash
         run: |
           set -euxo pipefail
-          USERNAME="${RDP_USER:-runneradmin}"
-          HOME_DIR="/home/${USERNAME}"
 
-          # 1) Set sesi user ke MATE
-          sudo -u "$USERNAME" bash -lc 'echo "mate-session" > ~/.xsession'
-          sudo -u "$USERNAME" bash -lc 'printf "[Desktop Entry]\nType=Application\nName=MATE\nExec=mate-session\n" > ~/.xsessionrc || true'
-          sudo chown "$USERNAME:$USERNAME" "$HOME_DIR/.xsession" || true
-          [ -f "$HOME_DIR/.xsessionrc" ] && sudo chown "$USERNAME:$USERNAME" "$HOME_DIR/.xsessionrc" || true
+          fix_user () {
+            local U="$1"
+            local H="/home/$U"
+            id "$U" || return 0
 
-          # 2) Patch /etc/xrdp/startwm.sh supaya SELALU start mate-session
+            # Session files
+            sudo -u "$U" bash -lc 'echo "mate-session" > ~/.xsession'
+            sudo -u "$U" bash -lc 'printf "[Desktop Entry]\nType=Application\nName=MATE\nExec=mate-session\n" > ~/.xsessionrc || true'
+
+            # Ensure config dirs exist and writable
+            sudo -u "$U" mkdir -p "$H/.config/caja" "$H/.config/dconf"
+            sudo chown -R "$U:$U" "$H/.config"
+            sudo chmod -R u+rwX "$H/.config"
+
+            # Some themes/icons avoid warnings (optional)
+            sudo -u "$U" mkdir -p "$H/.local/share"
+
+            # Initialize dconf so Caja/Panel can write settings
+            sudo -u "$U" dbus-launch dconf update || true
+          }
+
+          fix_user runner
+          fix_user runneradmin
+
+          # Patch startwm.sh to always start MATE (with sane env)
           sudo cp /etc/xrdp/startwm.sh /etc/xrdp/startwm.sh.bak
           sudo bash -c 'cat >/etc/xrdp/startwm.sh' <<'EOF'
           #!/bin/sh
-          if test -r /etc/profile; then
-              . /etc/profile
-          fi
-          if test -r /etc/default/locale; then
-              . /etc/default/locale
-              export LANG LANGUAGE
-          fi
+          if test -r /etc/profile; then . /etc/profile; fi
+          if test -r /etc/default/locale; then . /etc/default/locale; export LANG LANGUAGE; fi
 
-          # Pastikan env yang umum
           export XDG_CONFIG_DIRS="/etc/xdg:/etc"
           export XDG_DATA_DIRS="/usr/share:/usr/local/share"
           export DESKTOP_SESSION=mate
           export XDG_CURRENT_DESKTOP=MATE
 
-          # Start dbus jika ada
+          # start user dbus if available
           if command -v dbus-launch >/dev/null 2>&1; then
             eval "$(dbus-launch --sh-syntax)" || true
           fi
 
-          # Selalu jalankan MATE
           if command -v mate-session >/dev/null 2>&1; then
             exec mate-session
           fi
 
-          # Fallback terakhir
+          # Fallback
           if test -r /etc/X11/Xsession; then
-              exec /etc/X11/Xsession
+            exec /etc/X11/Xsession
           fi
           EOF
           sudo chmod +x /etc/xrdp/startwm.sh
 
-          # 3) Restart layanan
           sudo systemctl enable xrdp
           sudo systemctl restart xrdp
-
-      - name: (Optional) Batasi RDP ke jaringan Tailscale saja
-        shell: bash
-        run: |
-          set -euxo pipefail
-          # UFW default non-aktif; kalau mau aman:
-          # sudo apt-get install -y ufw
-          # sudo ufw allow from 100.64.0.0/10 to any port 3389 proto tcp
-          # sudo ufw --force enable
-          true
 
       - name: Install Tailscale
         shell: bash
@@ -123,16 +120,18 @@ jobs:
           sudo tailscale up --authkey="${TS_AUTHKEY}" --hostname="gh-ubuntu-${GITHUB_RUN_ID}"
           TS_IP="$(tailscale ip -4 | head -n1 || true)"
           if [ -z "$TS_IP" ]; then
-            echo "Gagal mengambil IPv4 Tailscale"; exit 1
+            echo "No Tailscale IPv4"; exit 1
           fi
           echo "TAILSCALE_IP=$TS_IP" >> "$GITHUB_ENV"
           echo "Tailscale IP: $TS_IP"
 
-      - name: Verify xRDP is listening
+      - name: Verify xRDP listening
         shell: bash
         run: |
           set -euxo pipefail
           sudo ss -tulpn | awk '$1 ~ /LISTEN/ && $5 ~ /:3389/ {print $0}' || true
+          echo "Test connect via Tailscale:"
+          timeout 5 bash -lc "exec 3<>/dev/tcp/${TAILSCALE_IP}/3389" && echo "OK 3389" || (echo "FAIL 3389" && exit 1)
 
       - name: Show connection info & keep alive
         shell: bash
@@ -142,11 +141,11 @@ jobs:
           echo
           echo "=== RDP ACCESS (Ubuntu MATE) ==="
           echo "Address : ${TAILSCALE_IP}"
-          echo "Username: ${RDP_USER}"
+          echo "User 1  : ${RDP_USER1}"
+          echo "User 2  : ${RDP_USER2}"
           echo "Password: ${RDP_PASS}"
           echo "================================"
           echo
-          # Keep runner hidup
           while true; do
             echo "[$(date)] RDP Active - cancel workflow to terminate"
             sleep 300
