--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,77 +1,88 @@
-name: macOS + Tailscale SSH
+name: Yanzz W11-RDP-TS-FULL
 
 on:
   workflow_dispatch:
 
 jobs:
-  setup-remote:
-    # 1. Menggunakan runner macos-latest
-    runs-on: macos-latest
-    timeout-minutes: 360 # Tahan sampai 6 jam
+  win11-rdp:
+    runs-on: windows-latest
+    timeout-minutes: 360
 
     steps:
-      - name: Install and Connect Tailscale
-        shell: bash
+      - name: Enable RDP + W11 look
         run: |
-          echo "Menginstall Tailscale..."
-          # 2. Cara install Tailscale di macOS adalah pakai 'brew'
-          brew install tailscale
-          
-          echo "Menjalankan Tailscale service..."
-          # 3. Service-nya harus dijalankan di background
-          sudo tailscaled &
-          
-          # Jeda singkat untuk memastikan service siap
-          sleep 5 
-          
-          echo "Menghubungkan ke Tailscale dan mengaktifkan SSH..."
-          # 4. Flag --ssh sangat penting
-          sudo tailscale up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname="gh-runner-macos-$GITHUB_RUN_ID" --accept-routes --ssh
-          
-          # Ambil IPv4 dengan retry
-          echo "Mendapatkan IP Tailscale..."
-          tsIP=""
-          retries=0
-          while [ -z "$tsIP" ] && [ $retries -lt 12 ]; do
-            tsIP=$(sudo tailscale ip -4)
-            if [ -z "$tsIP" ]; then
-              echo "Menunggu IP... (Percobaan $((retries+1)))"
-              sleep 5
-              retries=$((retries + 1))
-            fi
-          done
+          Set-ItemProperty -Path 'HKLM:SystemCurrentControlSetControlTerminal Server' -name "fDenyTSConnections" -value 0
+          Set-ItemProperty -Path 'HKLM:SystemCurrentControlSetControlTerminal ServerWinStationsRDP-Tcp' -name "UserAuthentication" -value 0
+          Set-ItemProperty -Path 'HKLM:SystemCurrentControlSetControlTerminal ServerWinStationsRDP-Tcp' -name "SecurityLayer" -value 0
+          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+          Restart-Service -Name TermService -Force
 
-          if [ -z "$tsIP" ]; then
-            echo "::error::Gagal mendapatkan IP Tailscale."
-            exit 1
-          fi
-          
-          echo "TAILSCALE_IP=$tsIP" >> $GITHUB_ENV
-          
-          # 5. User default di runner macOS adalah 'runner'
-          echo "SSH_USER=runner" >> $GITHUB_ENV
-          echo "Tailscale IP: $tsIP"
+          # W11 wallpaper
+          Invoke-WebRequest https://res.cloudinary.com/drsmmc2hz/image/upload/v1763382890/ebloza4ferubydvmutcj.jpg -OutFile C:\w11.jpg
+          reg add "HKCU\Control Panel\Desktop" /v Wallpaper /t REG_SZ /d "C:\w11.jpg" /f
+          RUNDLL32.EXE user32.dll,UpdatePerUserSystemParameters
 
-      - name: Show connection info & keep alive
-        shell: bash
-        timeout-minutes: 360 # Sesuaikan dengan timeout job
+      - name: Create root user Yanzz
         run: |
-          echo ""
-          echo "==================="
-          echo "=== SSH ACCESS (TERMINAL) ==="
-          echo "Ini HANYA Terminal. JANGAN pakai VNC Viewer."
-          echo "Gunakan aplikasi SSH Client (misal: Termius, JuiceSSH)."
-          echo ""
-          echo "Address  : $TAILSCALE_IP"
-          echo "User     : $SSH_USER"
-          echo "Password : (Tidak perlu - pakai autentikasi Tailscale)"
-          echo "-------------------"
-          echo "Perintah : ssh $SSH_USER@$TAILSCALE_IP"
-          echo "==================="
-          echo ""
-          
-          # Jaga runner tetap hidup
-          while true; do
-            echo "[$(date)] SSH Active - Batalkan workflow untuk menghentikan"
-            sleep 300
-          done
+          $pass = -join ((48..57) + (65..90) + (97..122) | Get-Random -Count 16 | ForEach-Object { [char]$_ })
+          $sec = ConvertTo-SecureString $pass -AsPlainText -Force
+          New-LocalUser -Name "Yanzz" -Password $sec -AccountNeverExpires
+          Add-LocalGroupMember -Group "Administrators" -Member "Yanzz"
+          Add-LocalGroupMember -Group "Remote Desktop Users" -Member "Yanzz"
+          # Simpan Creds ke file sementara biar bisa dibaca step selanjutnya
+          echo "User: Yanzz" > C:\creds.txt
+          echo "Pass: $pass" >> C:\creds.txt
+          echo "CREDS=User: Yanzz  |  Pass: $pass" >> $env:GITHUB_ENV
+
+      - name: Install Tailscale
+        run: |
+          Invoke-WebRequest https://pkgs.tailscale.com/stable/tailscale-setup-latest.exe -OutFile ts.exe
+          Start-Process -FilePath "ts.exe" -ArgumentList "/quiet", "/norestart" -Wait
+
+      - name: Establish Tailscale Connection
+        run: |
+          & "$env:ProgramFilesTailscale	ailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gha-rdp-yanzz --accept-routes
+          $ip = & "$env:ProgramFilesTailscale	ailscale.exe" ip -4
+          echo "TS_IP=$ip" >> $env:GITHUB_ENV
+
+      - name: Install Chrome
+        run: |
+          Invoke-WebRequest https://dl.google.com/chrome/install/latest/chrome_installer.exe -OutFile chrome.exe
+          Start-Process .chrome.exe -Args "/silent /install" -Wait
+
+      - name: Download Roblox (Installer Only)
+        run: |
+          Invoke-WebRequest https://setup.rbxcdn.com/RobloxPlayerLauncher.exe -OutFile C:\RobloxPlayerLauncher.exe
+          Write-Host "Roblox Installer saved at C:\RobloxPlayerLauncher.exe"
+
+      - name: Install VS Code
+        run: |
+          Invoke-WebRequest "https://code.visualstudio.com/sha/download?build=stable&os=win32-x64-user" -OutFile vscode.exe
+          Start-Process .scode.exe -ArgumentList "/VERYSILENT /MERGETASKS=!runcode" -Wait
+
+      - name: Set Environment & Wallpaper System-wide
+        run: |
+          reg add "HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System" /v Wallpaper /t REG_SZ /d "C:\w11.jpg" /f
+          reg add "HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System" /v WallpaperStyle /t REG_SZ /d "2" /f
+          # Disable UAC for smooth RDP
+          reg add "HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\Policies\System" /v EnableLUA /t REG_DWORD /d 0 /f
+
+      - name: SHOW CREDENTIALS
+        run: |
+          Write-Host "=========================================="
+          Write-Host "       YANZZ RDP (GITHUB ACTIONS)         "
+          Write-Host "=========================================="
+          Write-Host "IP ADDRESS (Tailscale) : $env:TS_IP"
+          cat C:\creds.txt
+          Write-Host "=========================================="
+          Write-Host "Roblox Installer: C:\RobloxPlayerLauncher.exe"
+          Write-Host "=========================================="
+
+      - name: Anti-Shutdown Loop (6 Hours Max)
+        run: |
+          $i = 0
+          while ($i -lt 360) {
+            $i++
+            Write-Host "Alive: $i minutes running..."
+            Start-Sleep 60
+          }
